--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   shared_preferences: ^2.2.2 
 
   cupertino_icons: ^1.0.8
+  flame: ^1.35.0
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +24,6 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - lib/assets/images/pesona.png
+    - lib/assets/items/sprite_sheet_items.png
